--- a/platform/mv3/extension/_locales/fy/messages.json
+++ b/platform/mv3/extension/_locales/fy/messages.json
@@ -236,11 +236,11 @@
     "description": "Short description for a checkbox in the options page"
   },
   "developerModeLabel": {
-    "message": "Developer mode",
+    "message": "Untwikkelersmodus",
     "description": "Label for a checkbox in the options page"
   },
   "developerModeLegend": {
-    "message": "Enable access to features suitable for technical users.",
+    "message": "Tagong ta foar technyske brûkers geskikte funksjes ynskeakelje.",
     "description": "Short description for a checkbox in the options page"
   },
   "findListsPlaceholder": {
@@ -292,23 +292,23 @@
     "description": "Tooltip for the button used to exit zapper mode"
   },
   "saveButton": {
-    "message": "Save",
+    "message": "Bewarje",
     "description": "Text for buttons used to save changes"
   },
   "revertButton": {
-    "message": "Revert",
+    "message": "Ungedien meitsje",
     "description": "Text for buttons used to revert changes"
   },
   "importAndAppendButton": {
-    "message": "Import and append…",
+    "message": "Ymportearje en tafoegje…",
     "description": "Text for buttons used to import and append content"
   },
   "exportButton": {
-    "message": "Export…",
+    "message": "Eksportearje…",
     "description": "Text for buttons used to export content"
   },
   "dnrRulesSummary": {
-    "message": "Enter your own DNR rules below. <b>Do not add content from untrusted sources.</b>",
+    "message": "Fier hjirûnder jo eigen DNR-regels yn. <b>Foegje gjin ynhâld fan net-fertroude boarnen ta.</b>",
     "description": "Short description of the DNR rules editor pane"
   }
 }
