--- a/platform/mv3/extension/_locales/nl/messages.json
+++ b/platform/mv3/extension/_locales/nl/messages.json
@@ -4,7 +4,7 @@
     "description": "extension name."
   },
   "extShortDesc": {
-    "message": "Een toestemmingsloze inhoudsblokkeerder. Blokkeert direct na installatie advertenties, trackers, miners en meer.",
+    "message": "Een efficiënte inhoudsblokkeerder. Blokkeert direct na installatie advertenties, trackers, miners en meer.",
     "description": "this will be in the Chrome web store: must be 132 characters or less"
   },
   "perRulesetStats": {
@@ -120,7 +120,7 @@
     "description": "A paragraph in the filter issue reporter section"
   },
   "supportFindSpecificButton": {
-    "message": "Soortgelijke meldingen zoeken",
+    "message": "Soortgelijke meldingen op GitHub zoeken",
     "description": "A clickable link in the filter issue reporter section"
   },
   "supportS6URL": {
@@ -168,7 +168,7 @@
     "description": "A checkbox to use for NSFW sites"
   },
   "supportReportSpecificButton": {
-    "message": "Nieuwe melding maken",
+    "message": "Nieuwe melding op GitHub maken",
     "description": "Text for button which open an external webpage in Support pane"
   },
   "defaultFilteringModeSectionLabel": {
@@ -236,11 +236,11 @@
     "description": "Short description for a checkbox in the options page"
   },
   "developerModeLabel": {
-    "message": "Developer mode",
+    "message": "Ontwikkelaarsmodus",
     "description": "Label for a checkbox in the options page"
   },
   "developerModeLegend": {
-    "message": "Enable access to features suitable for technical users.",
+    "message": "Toegang tot voor technische gebruikers geschikte functies inschaken.",
     "description": "Short description for a checkbox in the options page"
   },
   "findListsPlaceholder": {
@@ -292,23 +292,23 @@
     "description": "Tooltip for the button used to exit zapper mode"
   },
   "saveButton": {
-    "message": "Save",
+    "message": "Opslaan",
     "description": "Text for buttons used to save changes"
   },
   "revertButton": {
-    "message": "Revert",
+    "message": "Ongedaan maken",
     "description": "Text for buttons used to revert changes"
   },
   "importAndAppendButton": {
-    "message": "Import and append…",
+    "message": "Importeren en toevoegen…",
     "description": "Text for buttons used to import and append content"
   },
   "exportButton": {
-    "message": "Export…",
+    "message": "Exporteren…",
     "description": "Text for buttons used to export content"
   },
   "dnrRulesSummary": {
-    "message": "Enter your own DNR rules below. <b>Do not add content from untrusted sources.</b>",
+    "message": "Voer hieronder uw eigen DNR-regels in. <b>Voeg geen inhoud van niet-vertrouwde bronnen toe.</b>",
     "description": "Short description of the DNR rules editor pane"
   }
 }
