--- a/platform/mv3/extension/_locales/br_FR/messages.json
+++ b/platform/mv3/extension/_locales/br_FR/messages.json
@@ -19,6 +19,10 @@
     "message": "Arventennoù",
     "description": "appears as tab name in dashboard"
   },
+  "developPageName": {
+    "message": "Develop",
+    "description": "appears as tab name in dashboard. Inspired from 'Develop' menu in Safari, see <https://developer.apple.com/documentation/safari-developer-tools/develop-menu>"
+  },
   "aboutPageName": {
     "message": "Diwar-benn",
     "description": "appears as tab name in dashboard"
@@ -310,5 +314,9 @@
   "dnrRulesSummary": {
     "message": "Lakait ho reolennoù DNR deoc'h-c'hwi amañ-dindan. <b>Arabat ouzhpennañ danvez a zeu diouzh mammennoù douetus.</b>",
     "description": "Short description of the DNR rules editor pane"
+  },
+  "dnrRulesCountInfo": {
+    "message": "Number of registered rules: {count}",
+    "description": "Short sentence to report the number of currently registered DNR rules"
   }
 }
