--- a/platform/mv3/extension/_locales/uk/messages.json
+++ b/platform/mv3/extension/_locales/uk/messages.json
@@ -19,6 +19,10 @@
     "message": "Налаштування",
     "description": "appears as tab name in dashboard"
   },
+  "developPageName": {
+    "message": "Develop",
+    "description": "appears as tab name in dashboard. Inspired from 'Develop' menu in Safari, see <https://developer.apple.com/documentation/safari-developer-tools/develop-menu>"
+  },
   "aboutPageName": {
     "message": "Про застосунок",
     "description": "appears as tab name in dashboard"
@@ -310,5 +314,9 @@
   "dnrRulesSummary": {
     "message": "Введіть свої правила в форматі DNR нижче. <b>Не додавайте вміст з ненадійних джерел.</b>",
     "description": "Short description of the DNR rules editor pane"
+  },
+  "dnrRulesCountInfo": {
+    "message": "Number of registered rules: {count}",
+    "description": "Short sentence to report the number of currently registered DNR rules"
   }
 }
